Add code to generate dataset for training

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ train_trajectory_generator/*.npy
 train_trajectory_generator/*.csv
 train_trajectory_generator/*.pgm
 train_trajectory_generator/*.pgf
+train_trajectory_generator/*.pickle
