Update dockerfile to run darts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM nvidia/cuda:10.0-base-ubuntu18.04
 
+################################################################################################
+#  Some dependencies don't run on all systems, this docker can be used as compatibility layer  #
+################################################################################################
+
 # Update and add repositories
 RUN apt-get -y update \
     && apt-get install -y software-properties-common \
@@ -22,7 +26,8 @@ RUN apt-get install python3.8-venv
 
 RUN python3 -m venv /venv
 
-COPY / /trajectory_predictor/
+# Dockerfile should be bulit from parent directory
+COPY ../ /trajectory_predictor/
 
 # To make source work
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
@@ -33,3 +38,5 @@ RUN source /venv/bin/activate && \
 
 RUN source /venv/bin/activate && \
     cd /trajectory_predictor && pip install -e .
+
+CMD source /venv/bin/activate && cd /trajectory_predictor && /bin/bash
