--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ install_requires =
    scipy
    shapely
    matplotlib
+   opencv-python
+   pytorch-lightning==1.6.5
 
 [options.packages.find]
 where=src
