Unreliable last minute tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ install_requires =
    matplotlib
    opencv-python
    pytorch-lightning==1.6.5
+   prettytable
 
 [options.packages.find]
 where=src
